Framework version 1.0.110 + button stretch transition fix +  alert z-index fix + improved reduced motion

--- a/assets/styles/animation.css
+++ b/assets/styles/animation.css
@@ -500,6 +500,9 @@
     .infobanner.is-active > .infobanner-front,
     .infobanner.is-active > .infobanner-back > *,
     .battlepass-step.is-current .battlepass-content::before,
+    .progresscontainer > *:nth-child(1)::before,
+    .animate-pulse,
+    .animate-rotate,
     .animate-bounce,
     .animate-heartbeat,
     .animate-drop-in,
@@ -521,6 +524,9 @@
     .infobanner.is-active > .infobanner-front,
     .infobanner.is-active > .infobanner-back > *,
     .battlepass-step.is-current .battlepass-content::before,
+    .progresscontainer > *:nth-child(1)::before,
+    .animate-pulse,
+    .animate-rotate,
     .animate-bounce,
     .animate-heartbeat,
     .animate-drop-in,
